--- a/index.html
+++ b/index.html
@@ -4,21 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Richmond's Parks and Gardens</title>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        :visited,a{color:#7d7d7d}*{box-sizing:border-box}body{background-color:#ccc;color:#000}#map-canvas,body,html{width:100%;height:100%;z-index:1;position:absolute;margin:0}p{font-size:16px;margin:2px 0}strong{font-size:14px}ul{list-style-type:none;padding-left:0;margin-bottom:0}li{font-family:Helvetica,sans-serif;padding:20px 0 15px 15px}li:hover{background-color:#7d7d7d;color:#fff}a{text-decoration:none}hr{margin:10px 0 0;color:#639;border-color:#639}
+    </style>
+    <script src="//fast.eager.io/8Mfmtijv8G.js"></script>
 </head>
 <body>
-    <style> 
-       html, body, #map-canvas {width: 100%; height: 100%; z-index: 1; position: absolute; margin: 0;}15
-        p {font-size: 12px;}
-        strong {font-size: 18px;}
-        ul {list-style-type: none; padding-left: 0; margin-bottom: 0;}
-        li {font-family: Times, sans-serif; padding: 20px 10 px 15px;}
-        li:hover {background-color: #7d7d7d; color: white;}
-        a {text-decoration: none;}
-        hr { margin: 10px 0 0 0; color: #000000; border-color: #000000}
-    </style>
     <div id="map-canvas"></div>
     <div id="search-bar">
-        <input id="input" placeholder="Search for a park or garden" type="input" data-bind="textInput: query, valueUpdate: 'keydown'" autocomplete="on"></input>
+        <input id="input" placeholder="Search for a Park or Garden" type="input" data-bind="textInput: query, valueUpdate: 'keydown'" autocomplete="off"></input>
     </div>
     <div id="search-container">
         <div id="search-nav">
@@ -27,7 +22,7 @@
                 </ul>
                 <script type="text/html" id="marker">
                     <div data-bind="visible: visible">
-                    	<a href="#" data-bind="attr: {id: id}">
+                        <a href="#" data-bind="attr: {id: id}">
                             <li>
                                 <strong data-bind="text: name"></strong>
                                 <p data-bind="text: streetAddress"></p>
@@ -37,8 +32,14 @@
                 </script>
             </div>
         </div>
+<!--Arrow for collapsible list-->
+        <div id="arrow-container">
+            <img id="arrow" src="images/arrow.png" alt="arrow image">
+        </div>
     </div>
-    <link rel="stylesheet" href="css/style.css">          
+    <div class="reset-container">
+        <button id="reset">Reset Map</button>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript" src="js/library/knockout-3.3.0.js"></script>
     <script async type="text/javascript" src="js/app.js"></script>
